Correct float roundup and clipping problem

--- a/data/deepin-wm.css
+++ b/data/deepin-wm.css
@@ -24,12 +24,16 @@
 }
 
 .deepin-workspace-indicator-border {
-    border-radius: 5px;
+    border-radius: 6px;
     border: solid 1px rgba(0, 0, 0, 0.1);
 }
 
-.deepin-workspace-indicator {
+.deepin-workspace-indicator-lighter {
     background: rgba(255, 255, 255, 0.3);
+    border-radius: 5px;
+}
+
+.deepin-workspace-indicator {
     border-radius: 5px;
 }
 
